# immortal_gods

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  check_items.py  count_gods.py  entrypoint.sh  fix_po.py  inicio.md  pyproject.toml  render.yaml  requirements.txt  tmp_seed_initial.py  vercel.json
.github/workflows/: ci.yml
.opencode/commands/: supercommit.md
api/: index.py
apps/battle/: utils.py
apps/campaign/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/core/: admin.py  apps.py  context_processors.py  models.py  signals.py  urls.py  views.py
apps/gacha/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/gods/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/items/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/minigames/: admin.py  card_utils.py  models.py  urls.py  views.py
apps/pvp/: admin.py  models.py  urls.py  views.py
apps/teams/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: check_campaign.py  check_rarity.py  check_stats.py  download_god_images.py
static/css/: style.css
templates/: base.html
templates/admin/: send_gems.html
templates/campaign/: detail.html  enemies.html  event_detail.html  event_list.html  event_result.html  faction_battle_result.html  faction_ladder_detail.html  faction_ladders.html  insufficient_energy.html  list.html  locked.html  result.html
templates/core/: home.html  inventory.html  landing.html  leaderboard.html  login.html  missions.html  (+3 more)
(+87 files in other folders)
